some updates + scrollbar styling

--- a/signup/signup.html
+++ b/signup/signup.html
@@ -69,7 +69,7 @@
             />
             <label for="vpassword" class="input-label">Verifica Password</label>
           </div>
-          <input type="submit" class="btn" value="Login" name="login" />
+          <input type="submit" class="btn" value="Crea Account" name="signup" />
         </form>
       </div>
     </div>
