--- a/teachers-admin/teachers.html
+++ b/teachers-admin/teachers.html
@@ -35,8 +35,9 @@
       </div>
     </nav>
     <!-- Nav-Bar - END -->
-
-      <div class="tabs-nav container">
+    
+    <div class="tabs-nav container">
+      <div class="tabs">
         <div class="tab">
           <input type="radio" name="tab-nav" id="tab-nav-1" checked>
           <label for="tab-nav-1">Docenti</label>
@@ -46,6 +47,7 @@
           <label for="tab-nav-2">Codici</label>
         </div>
       </div>
+    </div>
     </div>
     <div class="tabs-container container">
       <div class="tab-nav-1">
@@ -271,6 +273,19 @@
                   <div class="text-block dark">Italiano 1 IPI</div>
                   <div class="text-block dark">Italiano 2 IPI</div>
                 </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- superadmins -->
+        <div class="dropdown-menu superadmins">
+          <h2 class="justify-between align-center toggle">
+            Non Classificato <i class="material-icons">keyboard_arrow_right</i>
+          </h2>
+          <div class="panel">
+            <div class="grid-wrapper">
+              <div class="card teacher-card">
+                <a href="#"><h4>Kerolos Ibrahim</h4></a>
               </div>
             </div>
           </div>
