changing directories setup

--- a/login/login.html
+++ b/login/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/basic.css" />
     <link rel="stylesheet" href="../css/components.css" />
-    <link rel="stylesheet" href="./login.css" />
+    <link rel="stylesheet" href="../css/login.css" />
     <title>Generazione Esami | Login</title>
   </head>
   <body>
