--- a/subjects-admin/subjects.html
+++ b/subjects-admin/subjects.html
@@ -482,6 +482,6 @@
 
     <!-- drawer.js-link -->
     <script src="../js/drawer.js"></script>
-    <script src="./subjects.js"></script>
+    <script src="../js/subjects.js"></script>
   </body>
 </html>
