--- a/generazione-esami/genera-esame-2.html
+++ b/generazione-esami/genera-esame-2.html
@@ -7,10 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/basic.css" />
     <link rel="stylesheet" href="../css/components.css" />
-    <link rel="stylesheet" href="genera-esame.css" />
-    <!-- <link rel="stylesheet" href="./teacher.css" />
-    <link rel="stylesheet" href="./teacher.css" />
-    <link rel="stylesheet" href="./account.css" /> -->
+    <link rel="stylesheet" href="../css/genera-esame.css" />
 
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
