--- a/subjects-admin/subject.html
+++ b/subjects-admin/subject.html
@@ -408,6 +408,29 @@
       </div>
     </div>
 
+    <!-- subject - modal - start -->
+    
+    <div id="subject-modal" class="modal-wrapper">
+      <a href="#" class="modal-background"></a>
+      <div class="modal">
+        <h1>Modifica</h1>
+        <form>
+          <div class="input-group">
+            <input
+              type="text"
+              class="input-field"
+              value="Italiano"
+              id="duration"
+              required
+            />
+            <label for="duration" class="input-label">Titolo</label>
+          </div>
+          <input type="submit" value="Conferma" class="btn">
+        </form>
+      </div>
+    </div>
+    <!-- subjrct - modal - ends -->
+
     <!-- drawer - START -->
     <div class="drawer-background"></div>
     <div class="drawer">
