--- a/subjects-admin/subjects.html
+++ b/subjects-admin/subjects.html
@@ -85,111 +85,60 @@
         <div class="card subject-card">
           <div class="justify-between align-center">
             <div class="flex-wrapper align-baseline">
-              <h3>Italiano</h3>
+              <a href="#"><h4>Italiano 1 ITI</h4></a>
               <div class="m-horizontal"></div>
-              <div class="text-block dark">1 ITI</div>
-            </div>
-            <div class="dropdown">
-              <button></button>
-
-              <!-- Options -->
-              <ul>
-                <li>
-                  <a href="#question-modal">
-                    Modifica<i class="material-icons">create</i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#question-modal-delete">
-                    Rimuovi<i class="material-icons">delete</i>
-                  </a>
-                </li>
-              </ul>
             </div>
           </div>
+          <div class="divider"></div>
+          <h5><strong> Unità : 10</strong></h5>
+          <h5><strong>Domande : 15</strong></h5>
+          <h5><strong>Insegnanti : 10</strong> </h5>
+          <h5><strong>Cordinatori : 10</strong> </h5>
         </div>
-
         <div class="card subject-card">
           <div class="justify-between align-center">
             <div class="flex-wrapper align-center">
-              <h3>Italiano</h3>
+              <a href="#"><h4>Italiano 2 ITI</h4></a>
               <div class="m-horizontal"></div>
-              <div class="text-block dark">2 ITI</div>
-            </div>
-            <div class="dropdown">
-              <button></button>
-
-              <!-- Options -->
-              <ul>
-                <li>
-                  <a href="#question-modal">
-                    Modifica<i class="material-icons">create</i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#question-modal-delete">
-                    Rimuovi<i class="material-icons">delete</i>
-                  </a>
-                </li>
-              </ul>
             </div>
           </div>
+          <div class="divider"></div>
+
+         <h5><strong> Unità : 10</strong></h5>
+          <h5><strong>Domande : 15</strong></h5>
+          <h5><strong>Insegnanti : 10</strong> </h5>
+          <h5><strong>Cordinatori : 10</strong> </h5>
         </div>
 
         <div class="card subject-card">
           <div class="justify-between align-center">
             <div class="flex-wrapper align-baseline">
-              <h3>Italiano</h3>
+              <a href="#"><h4>Italiano 3 ITI</h4></a>
               <div class="m-horizontal"></div>
-              <div class="text-block dark">3 ITI</div>
-            </div>
-            <div class="dropdown">
-              <button></button>
-
-              <!-- Options -->
-              <ul>
-                <li>
-                  <a href="#question-modal">
-                    Modifica<i class="material-icons">create</i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#question-modal-delete">
-                    Rimuovi<i class="material-icons">delete</i>
-                  </a>
-                </li>
-              </ul>
             </div>
           </div>
+          <div class="divider"></div>
+          <h5><strong> Unità : 10</strong></h5>
+          <h5><strong>Domande : 15</strong></h5>
+          <h5><strong>Insegnanti : 10</strong> </h5>
+          <h5><strong>Cordinatori : 10</strong> </h5>
         </div>
 
         <div class="card subject-card">
           <div class="justify-between align-center">
             <div class="flex-wrapper align-baseline">
-              <h3>Italiano</h3>
+              <a href="#"><h4>Italiano 4 ITI</h4></a>
               <div class="m-horizontal"></div>
-              <div class="text-block dark">4 ITI</div>
-            </div>
-            <div class="dropdown">
-              <button></button>
-
-              <!-- Options -->
-              <ul>
-                <li>
-                  <a href="#question-modal">
-                    Modifica<i class="material-icons">create</i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#question-modal-delete">
-                    Rimuovi<i class="material-icons">delete</i>
-                  </a>
-                </li>
-              </ul>
             </div>
           </div>
+          <div class="divider"></div>
+          <h5><strong> Unità : 10</strong></h5>
+          <h5><strong>Domande : 15</strong></h5>
+          <h5><strong>Insegnanti : 10</strong> </h5>
+          <h5><strong>Cordinatori : 10</strong> </h5>
         </div>
       </div>
+
       <!-- subjecs - END -->
 
       <!-- subject-modal - START -->
