removed classi from subject.html, removed some class attributes, modified roles modal from teacher.html and done some aethetical adjustments

--- a/subjects-admin/subject.html
+++ b/subjects-admin/subject.html
@@ -87,33 +87,17 @@
 
         <div class="data-card">
           <div class="justify-between align-center">
-            <h2 class="header">Coordinatori</h2>
+            <h2 class="header">Coordinatore</h2>
           </div>
           <div class="divider"></div>
           <div class="flex-wrapper">
             <div class="text-block dark">Italiano</div>
-            <div class="text-block dark">Informatica</div>
-            <div class="text-block dark">Storia</div>
-            <div class="text-block dark">Sistemi e Reti</div>
-            <div class="text-block dark">TPSIT</div>
           </div>
         </div>
 
         <div class="divider bold"></div>
 
-        <div class="data-card">
-          <div class="justify-between align-center">
-            <h2 class="header">Classi</h2>
-          </div>
-          <div class="divider"></div>
-          <div class="flex-wrapper">
-            <div class="text-block dark">Informatica</div>
-            <div class="text-block dark">Sistemi e Reti</div>
-            <div class="text-block dark">TPSIT</div>
-          </div>
-        </div>
-
-        <div class="divider bold"></div>
+        
       </div>
 
       <!-- Curriculum -->
