--- a/teachers-admin/teachers.html
+++ b/teachers-admin/teachers.html
@@ -50,8 +50,7 @@
     </div>
     </div>
     <div class="tabs-container container">
-      <div class="tab-nav-1">
-        <div class="divider"></div>
+      <div>
         <!-- docenti -->
         <div class="dropdown-menu">
           <h2 class="justify-between align-center toggle">
@@ -291,8 +290,7 @@
           </div>
         </div>
       </div>
-      <div class="tab-nav-2">
-        <div class="divider"></div>
+      <div>
         <div class="buttons-wrapper">
           <a href="#code-modal">
             <button class="btn btn-secondary">
@@ -307,7 +305,6 @@
             </button>
           </a>
         </div>
-        <div class="divider"></div>
         <div class="dropdown-menu">
           <h2 class="justify-between align-center toggle">
             Compilato <i class="material-icons">keyboard_arrow_right</i>
