--- a/generazione-esami/genera-esame-1.html
+++ b/generazione-esami/genera-esame-1.html
@@ -36,7 +36,7 @@
       <div class="justify-around m-vertical">
         <h1 class="text-center">Genera esame</h1>
       </div>
-      <div class=" m-vertical justify-around">
+      <div class=" m-vertical justify-around input-wrapper">
         <div class="input-group">
           <input placeholder="duration" type="number" class="input-field" name="duration" id="duration" required
             min="1" />
