a lot of editing

--- a/classes-adminEdit/class.html
+++ b/classes-adminEdit/class.html
@@ -43,15 +43,13 @@
           <div class="m-horizontal"></div>
           <h4>1 IPI E</h4>
         </div>
-        <i class="material-icons">
-          <a href="#class-modal"> settings </a>
-        </i>
+       
       </header>
       <!-- header - END -->
 
       <div class="divider"></div>
       <h3>Materie</h3>
-
+      <div class="m-vertical"></div>
       <!-- subjects - START -->
       <div class="flex-wrapper">
         <div class="text-block">Italiano</div>
@@ -64,10 +62,12 @@
         <div class="text-block">Elettro</div>
       </div>
       <!-- subjects - END -->
-
+      <div class="m-vertical"></div>
+      <div class="divider"></div>
       <div class="m-vertical"></div>
 
       <h3>Insegnanti</h3>
+      <div class="m-vertical"></div>
       <!-- teachers - START -->
       <div class="flex-wrapper">
         <div class="text-block">S7s</div>
