edited the codice.html: correcting the label and justifying the a.link in the center

--- a/inserire-codice/codice.html
+++ b/inserire-codice/codice.html
@@ -23,14 +23,14 @@
               id="codice"
               required
             />
-            <label for="codice" class="input-label">Nome</label>
+            <label for="codice" class="input-label">Codice</label>
           </div>
-
           <input type="submit" class="btn" value="Continua" name="signup" />
         </form>
         <div class="m-vertical"></div>
-        <a href="#" class="link">Sign in</a>
-        
+        <div class="justify-center">
+          <a href="#" class="link">Sign in</a>
+        </div>
       </div>
     </div>
   </body>
