--- a/teachers-admin/teacher.html
+++ b/teachers-admin/teacher.html
@@ -187,165 +187,45 @@
     <div class="modal sectors-modal">
       <h1>Materie</h1>
       <form>
-        <input class="search" type="text" placeholder="Cerca Materie">
-        <div class="divider"></div>
-        <div class="flex-wrapper searchable">
-          <div class="flex-wrapper m-vertical">
-            <div class="checkbox-group" hidden>
-              <input type="checkbox" name="italiano" id="italiano" />
-              <label for="italiano">
-                <i class="material-icons check">check</i>
-                <i class="material-icons add">add</i>
-                Italiano
-              </label>
-            </div>
-            <div class="checkbox-group" hidden>
-              <input type="checkbox" name="disegno" id="disegno" />
-              <label for="disegno">
-                <i class="material-icons check">check</i>
-                <i class="material-icons add">add</i>
-                Disegno
-              </label>
-            </div>
-            <div class="checkbox-group" hidden>
-              <input type="checkbox" name="elettro" id="elettro" />
-              <label for="elettro">
-                <i class="material-icons check">check</i>
-                <i class="material-icons add">add</i>
-                Elettro
-              </label>
-            </div>
-            <div class="checkbox-group" hidden> 
-              <input type="checkbox" name="meccanica" id="meccanica" />
-              <label for="meccanica">
-                <i class="material-icons check">check</i>
-                <i class="material-icons add">add</i>
-                Meccanica
-              </label>
-            </div>
-            <div class="checkbox-group" hidden>
-              <input type="checkbox" name="storia" id="storia" />
-              <label for="storia">
-                <i class="material-icons check">check</i>
-                <i class="material-icons add">add</i>
-                Storia
-              </label>
-            </div>
-            <div class="checkbox-group" hidden>
-              <input type="checkbox" name="religione-cristiana" id="religione-cristiana" />
-              <label for="religione-cristiana">
-                <i class="material-icons check">check</i>
-                <i class="material-icons add">add</i>
-                Religione Cristiana
-              </label>
-            </div>
-            <div class="checkbox-group" hidden>
-              <input type="checkbox" name="religione-musulmana" id="religione-musulmana" />
-              <label for="religione-musulmana">
-                <i class="material-icons check">check</i>
-                <i class="material-icons add">add</i>
-                Religione Musulmana
-              </label>
-            </div>
-            <div class="checkbox-group" hidden>
-              <input type="checkbox" name="ginnastica" id="ginnastica" />
-              <label for="ginnastica">
-                <i class="material-icons check">check</i>
-                <i class="material-icons add">add</i>
-                Ginnastica
-              </label>
-            </div>
-            <div class="checkbox-group" hidden>
-              <input type="checkbox" name="fisica" id="fisica" />
-              <label for="fisica">
-                <i class="material-icons check">check</i>
-                <i class="material-icons add">add</i>
-                Fisica
-              </label>
-            </div>
-            <div class="checkbox-group" hidden>
-              <input type="checkbox" name="sistemi-e-reti" id="sistemi-e-reti" />
-              <label for="sistemi-e-reti">
-                <i class="material-icons check">check</i>
-                <i class="material-icons add">add</i>
-                Sistemi e Reti
-              </label>
-            </div>
-            <div class="checkbox-group" hidden>
-              <input type="checkbox" name="informatica" id="informatica" />
-              <label for="informatica">
-                <i class="material-icons check">check</i>
-                <i class="material-icons add">add</i>
-                Informatica
-              </label>
-            </div>
-            <div class="checkbox-group" hidden>
-              <input type="checkbox" name="tpsit" id="tpsit" />
-              <label for="tpsit">
-                <i class="material-icons check">check</i>
-                <i class="material-icons add">add</i>
-                TPSIT
-              </label>
-            </div>
-            <div class="checkbox-group" hidden>
-              <input type="checkbox" name="science" id="science" />
-              <label for="science">
-                <i class="material-icons check">check</i>
-                <i class="material-icons add">add</i>
-                Science
-              </label>
-            </div>
-            <div class="checkbox-group" hidden>
-              <input type="checkbox" name="economia" id="economia" />
-              <label for="economia">
-                <i class="material-icons check">check</i>
-                <i class="material-icons add">add</i>
-                Economia
-              </label>
-            </div>
-            <div class="checkbox-group" hidden>
-              <input type="checkbox" name="chimestry" id="chimestry" />
-              <label for="chimestry">
-                <i class="material-icons check">check</i>
-                <i class="material-icons add">add</i>
-                Chimestry
-              </label>
-            </div>
-            <div class="checkbox-group" hidden>
-              <input type="checkbox" name="english" id="english" />
-              <label for="english">
-                <i class="material-icons check">check</i>
-                <i class="material-icons add">add</i>
-                English
-              </label>
-            </div>
-            <div class="checkbox-group" hidden>
-              <input type="checkbox" name="arabo" id="arabo" />
-              <label for="arabo">
-                <i class="material-icons check">check</i>
-                <i class="material-icons add">add</i>
-                Arabo
-              </label>
-            </div>
-            <div class="checkbox-group" hidden>
-              <input type="checkbox" name="lab-sistemi-e-reti" id="lab-sistemi-e-reti" />
-              <label for="lab-sistemi-e-reti">
-                <i class="material-icons check">check</i>
-                <i class="material-icons add">add</i>
-                Lab Sistemi e Reti
-              </label>
-            </div>
-            <div class="checkbox-group" hidden>
-              <input type="checkbox" name="lab-informatica" id="lab-informatica" />
-              <label for="lab-informatica">
-                <i class="material-icons check">check</i>
-                <i class="material-icons add">add</i>
-                Lab Informatica
-              </label>
+        <div>
+          <h3 class="inline">Materie:</h3>
+          <h4 class="inline blocks-count">0</h4>
+          <div class="m-vertical"></div>
+          <div class="blocks-form">
+            <textarea
+              type="text"
+              name="subarguments"
+              class="blocks-area"
+              hidden
+              required
+            ></textarea>
+            <div class="flex-wrapper"></div>
+            <div class="m-vertical"></div>
+            <div class="input-group">
+              <input
+                placeholder="#"
+                type="text"
+                class="input-field block-select"
+                id="subargument"
+                autocomplete="off"
+              />
+              <label for="subargument" class="input-label">Sotto-argomento</label>
+              <ul class="input-list card">
+                <li>Italiano 1 ITI</li>
+                <li>Storia 1 ITI</li>
+                <li>Inglese 1 ITI</li>
+                <li>Italiano 2 ITI</li>
+                <li>Storia 2 ITI</li>
+                <li>Italiano 2 IPI</li>
+                <li>Italiano 1 IPI</li>
+                <li>Informatica 3 ITI</li>
+                <li>Informatica 4 ITI</li>
+                <li>Sistemi e Reti 5 ITI</li>
+              </ul>
             </div>
           </div>
         </div>
-
+        <div class="m-vertical"></div>
         <input type="submit" value="Conferma" class="btn" />
       </form>
       <a href="#" class="modal-close-btn">&times;</a>
@@ -367,6 +247,7 @@
   <!-- drawer - END -->
 
   <!-- drawer.js-link -->
+  <script src="../js/blocks-form.js"></script>
   <script src="../js/drawer.js"></script>
 </body>
 
