added a class .width-full to utilize it in styles

--- a/components.html
+++ b/components.html
@@ -107,6 +107,14 @@
     <!-- ------------------------------------------ container ------------------------------------------------ -->
 
     <div class="container">
+      
+          <select name="" id="" class="width-full">
+            <option value="">3</option>
+            <option value="">3</option>
+            <option value="">3</option>
+            <option value="">3</option>
+          </select>
+
       <div class="question-wrapper">
         <div>
           <div>
